--- a/src/style/contact.css
+++ b/src/style/contact.css
@@ -1,17 +1,17 @@
 .contact-box {
-  background: url("../../public/pharmacy.png") no-repeat center center; /* Center the image */
-  background-size: cover; /* Ensures the image covers the entire area */
-  height: 100vh; /* Full viewport height */
+  background: url("../../public/pharmacy.png") no-repeat center center; 
+  background-size: cover;
+  height: 100vh; 
   display: flex;
   align-items: center;
-  justify-content: center; /* Center content horizontally */
+  justify-content: center; 
 }
 
 .contact-content {
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
-  background-color: rgba(163, 157, 157, 0.8); /* Slight transparency for the background */
+  background-color: rgba(163, 157, 157, 0.8); 
   border-radius: 8px;
   box-shadow: 0px 0px 10px black; 
 }
