--- a/src/style/product.css
+++ b/src/style/product.css
@@ -1,6 +1,4 @@
 .project-box {
-    /* background: url("../../public/pharmacy.png") no-repeat center center;
-    background-size: cover; */
     background:  #d2e2ec;
 }
 
@@ -8,70 +6,69 @@
     text-align: center;
     padding-top: 20px;
     margin-bottom: 20px;
-    font-size: 2.5rem; /* Large heading size */
+    font-size: 2.5rem; 
     font-family: math;
 }
 
 .main-div {
     display: flex;
-    flex-wrap: wrap; /* Allow items to wrap onto the next line */
-    justify-content: center; /* Evenly space items */
+    flex-wrap: wrap; 
+    justify-content: center; 
 
 }
 
 .project-item {
     background-color: rgb(244, 247, 248);
-    border: 1px solid #030303; /* Light border for separation */
-    border-radius: 8px; /* Rounded corners */
+    border: 1px solid #030303; 
+    border-radius: 8px; 
     padding: 15px;
     font-family: math;
-    margin: 10px; /* Space between items */
-    text-align: center; /* Center text */
-    width: 300px; /* Fixed width for consistent layout */
-    box-shadow: 0 2px 10px black; /* Subtle shadow for depth */
-    transition: transform 0.2s; /* Smooth scaling effect on hover */
+    margin: 10px;
+    text-align: center; 
+    width: 300px; 
+    box-shadow: 0 2px 10px black; 
+    transition: transform 0.2s;
     flex-direction: column;
     align-items: center;
 }
 
 .project-item:hover {
-    transform: scale(1.05); /* Slightly enlarge item on hover */
+    transform: scale(1.05); 
 }
 
 .portfolio-image {
-    border-radius: 8px; /* Round image corners */
-    width: 100%; /* Ensure image takes full width of the item */
-    height: 200px; /* Fixed height for uniformity */
-    object-fit: cover; /* Maintain aspect ratio and cover area */
+    border-radius: 8px; 
+    width: 100%; 
+    height: 200px;
+    object-fit: cover; 
 }
 
-/* Responsive Styles */
 @media (max-width: 768px) {
     .project-heading {
-        font-size: 2rem; /* Smaller heading size for tablets */
+        font-size: 2rem; 
     }
 
     .main-div {
-        justify-content: center; /* Center items on smaller screens */
+        justify-content: center; 
     }
 
     .project-item {
-        width: 90%; /* Full width for smaller screens */
-        margin: 10px 0; /* Vertical spacing */
+        width: 90%; 
+        margin: 10px 0; 
     }
 }
 
 @media (max-width: 480px) {
     .project-heading {
-        font-size: 1.5rem; /* Smaller heading size for mobile */
+        font-size: 1.5rem; 
     }
 
     .project-item {
-        width: 95%; /* Full width for mobile */
-        padding: 10px; /* Reduced padding */
+        width: 95%; 
+        padding: 10px; 
     }
 
     .portfolio-image {
-        height: 150px; /* Reduced height for mobile */
+        height: 150px;
     }
 }
